--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,10 @@
 #app-header {
     width: 100%;
-    height: 55px;
-    margin-bottom: 5px;
     color: white;
+    padding-top: 2px;
+    padding-bottom: 5px;
+    margin-bottom:5px;
     background-color: lightsteelblue;
     text-align: center;
-    vertical-align: middle;
+    vertical-align: top;
 }
