--- a/src/app/post-list/post-list.component.html
+++ b/src/app/post-list/post-list.component.html
@@ -7,6 +7,7 @@
   <div class="row">
     <h3 style="text-align: center;">{{ title }}</h3>
     <ul class="list-group" style="width: 100%">
+      <!-- Browsing the posts -->
       <app-post-list-item *ngFor="let p of posts" [post]="p"></app-post-list-item>
     </ul>
   </div>
